# hablogger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
amateur_radio/: APRS.md  README.md
arduino-workbench/: Frog Box Lid thin.stl  Frog Box no Seal - Part 1.stl  README.md  hinge_looser.stl
ballooninfo/: LaunchHistory.md  NCHS_4-29-2022_Launch.md  NEWCAMMOUNTBOTTOMHALF.ipt  NEWCAMMOUNTTOPHALF.ipt  materials.md  resources.md
ballooninfo/3D Printed Camera Mounts/: readme.md
ballooninfo/3D Printed Camera Mounts/Inventor_cam_mounts/: NEWCAMMOUNTBOTTOMHALF.ipt
ballooninfo/3D Printed Camera Mounts/STL_cam_mounts/: Akaso Mount Back.stl  Akaso Mount.stl  NEWCAMMOUNT.stl  NEWCAMMOUNTBOTTOMHALF.stl  NEWCAMMOUNTTOPHALF.stl  NEWCAMMOUNTv2.stl  NEWCAMMOUNTv3.stl  NEWCAMMOUNTv4.stl  cam holder 1.stl  cam holder2.stl
ballooninfo/HAB Launch/: launchdaychecklist.md  readme.md
ballooninfo/balloon_launch_101/: README.md
ballooninfo/nchs/: readme.md
ballooninfo/nwhs/: readme.md
c/: readme.md
c/arduino/: README.md
c/arduino/arduino-workbench/: Frog Box Lid Screws.stl  LICENSE.md  README.md
c/arduino/lesson0/: README.md
c/arduino/lesson1/: README-tom.md  README.md
c/arduino/lesson2/: README.md
c/arduino/lesson3/: README.md
c/arduino/lesson4/: README.md
c/raspberrypico/code/: .gitignore  CMakeLists.txt  main.c
normalhighschools/: README.md  november.md
pico-workbench/: Frog Box Lid Pico Screw.stl  latch_arm_v2.stl
project_workbench/: README.md
python/: README.md
python/raspberrypico/: .gitignore
telemetry-analysis/: KB9LNS-13.txt  README.md
(+166 files in other folders)
